# pyGUGA

./: .pre-commit-config.yaml  README.md  _typos.toml  guga_ab_drt.ipynb  pyproject.toml  setup.cfg  strategy.txt
.github/workflows/: python-app.yml
examples/: distinct_row_table.ipynb  nx_guga_graph_example.ipynb
pyguga/: __init__.py
pyguga/graph/: __init__.py  distinct_row_table.py
pyguga/graph/backend/: networkx_backend.py  networkx_plotting.py
pytuga/: __init__.py  angular_momentum.ipynb  guga_graph.py  guga_operator.py  guga_state.py  version.py
pytuga.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_guga_dim.py  test_shavitt_graph_ab.py  test_test.py
