[metadata]
name = pytuga
description = Unitary group approach tensor network
long_description = file: README.md
long_description_content_type = text/markdown
author = Nathan Fitzpatick
author_email = nfitzpatrickchem@gmail.com
url = https://github.com/NathanCQC/pyTUGA

[options]
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    numpy
    scipy
    pandas
    quimb

[tool:pytest]
minversion = 6.0
addopts = -rxX --disable-warnings -v -k 'not slow' -q
testpaths = tests
python_paths = .
cache_dir = .pytest_cache
